Grace/tests/gibbs/errors/t193.grace
// ERROR = P1021
var a := object
    def name = "A"
}
